--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
+    <button id="gridInput">Resize</button>
     <div id="container">
     </div>
 </body>
